Added views, adapters, etc

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,30 +11,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name="com.mirego.cschat.activities.HomeActivity"
+            android:name=".activities.HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.mirego.cschat.activities.LoginActivity"
+            android:name=".activities.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
-
         <activity
-            android:name="com.mirego.cschat.activities.ConversationsActivity"
+            android:name=".activities.ConversationsActivity"
             android:screenOrientation="portrait" />
-
-
         <activity
-            android:name="com.mirego.cschat.activities.ConversationActivity"
+            android:name=".activities.ConversationActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity android:name=".activities.CreateConversationActivity"></activity>
     </application>
 
 </manifest>
